# hugo-bros

./: AGENTS.md  README.md  SPECIFICATION.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: push_version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  files.rs  frontmatter_config.rs  hugo.rs  lib.rs  main.rs  markdown.rs
src/lib/components/: EditorToolbar.svelte  FrontmatterEditor.svelte  HexoControls.svelte  HugoControls.svelte  ImageGallery.svelte  PostCard.svelte  PostList.svelte  TipTapEditor.svelte  index.ts
src/lib/services/: backend.ts
src/lib/stores/: project.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
src/routes/editor/: +page.svelte
src/routes/posts/: +page.svelte
